Imagens de afiliações adicionadas

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
   </section>
 
   <section class="preco-wrapper">
-    <img src="/img/imagem 7.jpeg" alt="Lateral 1" class="preco-img">
-    <div class="preco">
+    <a href="https://pay.kirvano.com/34838c4f-20ff-44c7-af3c-65e3ad21b4f4?aff=9750749c-65bc-42e1-bf95-db40cd364465" target="_blank" style="text-decoration: none; color: inherit;">
+    <img src="/img/imagem 3.jpeg" alt="Lateral 1" class="preco-img">
+    </a> 
+    <div class="preco"> 
       <h2>🔥 OFERTA LIMITADA</h2>
       <div class="antigo">De R$197 por apenas</div>
       <div class="valor">R$9,90</div>
@@ -45,33 +47,52 @@
       <a href="https://app.kirvano.com/products" target="_blank" class="botao">🚀 DESTRAVAR ACESSO AGORA </a>
       <div class="garantia">🔒 Garantia de 7 dias ou seu dinheiro de volta</div>
     </div>
-    <img src="/img/imagem 6.jpeg" alt="Lateral 2" class="preco-img">
+     <a href="https://pay.kirvano.com/34838c4f-20ff-44c7-af3c-65e3ad21b4f4?aff=9750749c-65bc-42e1-bf95-db40cd364465" target="_blank" style="text-decoration: none; color: inherit;">
+    <img src="/img/imagem 1.jpeg" alt="Lateral 2" class="preco-img">
+    </a>
   </section>
 
   <section class="carrossel">
-    <div class="carrossel-container">
-      <div class="slide">
-        <img src="/img/imagem 5.jpeg" alt="Slide 1">
-        <p>Corte hilário com o Peter!</p>
-      </div>
-      <div class="slide">
-        <img src="/img/imagem 4.jpeg" alt="Slide 2">
-        <p>Stewie aprontando como sempre</p>
-      </div>
-      <div class="slide">
-        <img src="/img/imagem 3.jpeg" alt="Slide 3">
-        <p>Momento épico da série</p>
-      </div>
-      <div class="slide">
-        <img src="/img/imagem 2.png" alt="Slide 4">
-        <p>Clássico da Família da Pesada</p>
-      </div>
-      <div class="slide">
-        <img src="/img/imagem 1.jpeg" alt="Slide 5">
-        <p>Melhores momentos do Quagmire</p>
-      </div>
+  <div class="carrossel-container">
+    
+    <div class="slide">
+      <a href="https://pay.kirvano.com/34838c4f-20ff-44c7-af3c-65e3ad21b4f4?aff=9750749c-65bc-42e1-bf95-db40cd364465" target="_blank" style="text-decoration: none; color: inherit;">
+        <img src="/img/Airfryer.webp" alt="Slide 1">
+        <p>Airfryer - AS MELHORES RECEITAS FÁCEIS E RÁPIDAS!</p>
+      </a>
     </div>
-  </section>
+
+    <div class="slide">
+      <a href="https://pay.kirvano.com/2fb1f9de-6f3e-454f-9f15-2146d7f51e29?aff=9347f0b2-7b41-4d84-be65-9e9ab14dafe8" target="_blank" style="text-decoration: none; color: inherit;">
+        <img src="/img/Cortes.webp" alt="Slide 2">
+        <p>10Mil Cortes de Vídeos Pack</p>
+      </a>
+    </div>
+
+    <div class="slide">
+      <a href="https://pay.kirvano.com/9d82a6f4-4cc8-4c64-8ac8-ac8d36c80212?aff=52456e9f-f990-4795-8a61-56d942b5c04a" target="_blank" style="text-decoration: none; color: inherit;">
+        <img src="/img/Filme.webp" alt="Slide 3">
+        <p>PACOTÃO DE CORTES DE FILMES - VIRALIZAR</p>
+      </a>
+    </div>
+
+    <div class="slide">
+      <a href="https://pay.kirvano.com/1d319938-4177-4f10-aac5-376196fe9735?aff=aa2c66de-0194-4b9b-b87c-f5b92ab8d985" target="_blank" style="text-decoration: none; color: inherit;">
+        <img src="/img/Jogo.webp" alt="Slide 4">
+        <p>Playbox - Jogos Nostálgicos</p>
+      </a>
+    </div>
+
+    <div class="slide">
+      <a href="https://pay.kirvano.com/ed21ae16-4767-49d6-9bcb-1aae504b068f?aff=60a6f114-8cb3-4742-87f5-bb44331e5c7f" target="_blank" style="text-decoration: none; color: inherit;">
+        <img src="/img/Peter.webp" alt="Slide 5">
+        <p>Mega Pack Cortes 4.0</p>
+      </a>
+    </div>
+
+  </div>
+</section>
+
 
 <section class="resultados">
   <h2 class="titulo-amarelo">VEJA OS RESULTADOS REAIS:</h2>
