--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </section>
 
   <section class="preco-wrapper">
-    <a href="https://pay.kirvano.com/34838c4f-20ff-44c7-af3c-65e3ad21b4f4?aff=9750749c-65bc-42e1-bf95-db40cd364465" target="_blank" style="text-decoration: none; color: inherit;">
+    <a href="https://pay.kirvano.com/ec8f4483-eb90-472c-923c-41820d96530e" target="_blank" style="text-decoration: none; color: inherit;">
     <img src="/img/imagem 3.jpeg" alt="Lateral 1" class="preco-img">
     </a> 
     <div class="preco"> 
@@ -44,10 +44,10 @@
       <div class="valor">R$9,90</div>
       <div class="parcelado">ou 12x de R$0,99 no cartão</div>
       <div class="economia">💰 Você economiza R$187,10!</div>
-      <a href="https://app.kirvano.com/products" target="_blank" class="botao">🚀 DESTRAVAR ACESSO AGORA </a>
+      <a href="https://pay.kirvano.com/ec8f4483-eb90-472c-923c-41820d96530e" target="_blank" class="botao">🚀 DESTRAVAR ACESSO AGORA </a>
       <div class="garantia">🔒 Garantia de 7 dias ou seu dinheiro de volta</div>
     </div>
-     <a href="https://pay.kirvano.com/34838c4f-20ff-44c7-af3c-65e3ad21b4f4?aff=9750749c-65bc-42e1-bf95-db40cd364465" target="_blank" style="text-decoration: none; color: inherit;">
+     <a href="https://pay.kirvano.com/ec8f4483-eb90-472c-923c-41820d96530e" target="_blank" style="text-decoration: none; color: inherit;">
     <img src="/img/imagem 1.jpeg" alt="Lateral 2" class="preco-img">
     </a>
   </section>
@@ -142,7 +142,8 @@
 </section>
 
 <section class="botao-final">
-  <a href="#oferta" class="botao-destaque">🚀 DESTRAVAR ACESSO AGORA</a>
+  <a href="https://pay.kirvano.com/ec8f4483-eb90-472c-923c-41820d96530e" target="_blank" class="botao" 
+   href="#oferta" class="botao-destaque">🚀 DESTRAVAR ACESSO AGORA</a>
 </section>
     
 
