Atualizações no footer

--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
   <footer>
     <div class="info">
       &copy; 2025 Cortes da Pesada. Todos os direitos reservados.<br>
-      Contato: contato@cortesdapesada.com<br>
-      Instagram: @cortesdapesada<br>
+      Contato: cartoondrop69@gmail.com<br>
+      Instagram: @corteslucrativos69<br>
+      TikTok: cartoondrop
+      Youtube: Cartoon Drop
       <a href="#">Termos de uso</a> | <a href="#">Política de privacidade</a>
     </div>
   </footer>
