Atualizações no footer1

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       &copy; 2025 Cortes da Pesada. Todos os direitos reservados.<br>
       Contato: cartoondrop69@gmail.com<br>
       Instagram: @corteslucrativos69<br>
-      TikTok: cartoondrop
-      Youtube: Cartoon Drop
+      TikTok: cartoondrop<br>
+      Youtube: Cartoon Drop<br>
       <a href="#">Termos de uso</a> | <a href="#">Política de privacidade</a>
     </div>
   </footer>
